# fastfair

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
fastfair/: datasets.py  measures.py  models.py
notebooks/: measures.ipynb  regression.ipynb
